About section mobile fixes

--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ nav .nav-bar a:hover {
   line-height: 1.6rem;
   height: 100vh;
   width: 100%;
-  padding: 10vh;
+  padding-top: 15vh;
 }
 
 #about .container {
