--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -2,7 +2,7 @@
   line-height: 1.6rem;
   height: 100vh;
   width: 100%;
-  padding: 10vh;
+  padding-top: 15vh;
 
   .container {
     display: flex;
